RESOLVED FIXED230977
REGRESSION (r282150): Missing background-color on inline box while hovering
https://bugs.webkit.org/show_bug.cgi?id=230977
Summary REGRESSION (r282150): Missing background-color on inline box while hovering
alan
Reported 2021-09-29 12:18:02 PDT
Created attachment 439640 [details] Test case see attached test case
Attachments
Test case (143 bytes, text/html)
2021-09-29 12:18 PDT, alan
no flags
Patch (12.44 KB, patch)
2021-09-29 15:09 PDT, alan
no flags
Patch (12.33 KB, patch)
2021-09-30 07:26 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2021-09-29 12:18:27 PDT
alan
Comment 2 2021-09-29 15:09:54 PDT
Antti Koivisto
Comment 3 2021-09-30 04:08:36 PDT
Comment on attachment 439666 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=439666&action=review > Source/WebCore/rendering/RenderInline.cpp:194 > + if (auto* container = LayoutIntegration::LineLayout::blockContainer(*this); container && shouldInvalidateLineLayoutPath) > container->invalidateLineLayoutPath(); you could get the block via lineLayout->flow() too (and it doesn't need to be null tested).
alan
Comment 4 2021-09-30 07:26:49 PDT
EWS
Comment 5 2021-09-30 08:26:29 PDT
Committed r283312 (242337@main): <https://commits.webkit.org/242337@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 439735 [details].
Note You need to log in before you can comment on or make changes to this bug.