(REGRESSION r282150) Missing background-color on inline box while hovering https://bugs.webkit.org/show_bug.cgi?id=230977 <rdar://problem/83682736>

Reviewed by Antti Koivisto.

Source/WebCore:

Check if the RenderInline is still eligible for the modern line layout codepath after style change.

Test: fast/inline/inline-box-background-dynamic.html

* layout/integration/LayoutIntegrationCoverage.cpp:
(WebCore::LayoutIntegration::canUseForRenderInlineChild):
(WebCore::LayoutIntegration::canUseForChild):
(WebCore::LayoutIntegration::canUseForLineLayoutAfterInlineBoxStyleChange):
* layout/integration/LayoutIntegrationCoverage.h:
* layout/integration/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::canUseForAfterInlineBoxStyleChange):
* layout/integration/LayoutIntegrationLineLayout.h:
* rendering/RenderInline.cpp:
(WebCore::RenderInline::styleDidChange):

LayoutTests:

* fast/inline/inline-box-background-dynamic-expected.html: Added.
* fast/inline/inline-box-background-dynamic.html: Added.


Canonical link: https://commits.webkit.org/242337@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283312 268f45cc-cd09-0410-ab3c-d52691b4dbfc